[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psp"
version = "0.1.0"
description = "Personal Software Process time tracker CLI"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.scripts]
psp = "psp.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
